--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "drag-and-drop",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
-  },
-  "dependencies": {
-    "@types/uuid": "^9.0.8",
-    "uuid": "^9.0.1"
-  }
+    "name": "drag-and-drop",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist",
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "devDependencies": {
+        "gh-pages": "^6.1.1",
+        "typescript": "^5.2.2",
+        "vite": "^5.2.0"
+    },
+    "dependencies": {
+        "@types/uuid": "^9.0.8",
+        "uuid": "^9.0.1"
+    }
 }
